# unspool

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  issues.md
.claude/: settings.json
.github/: dependabot.yml
backend/: .dockerignore  .env.example  pyrightconfig.json  pytest.ini  railway.json  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  test_e2e.py  test_extractor.py  test_hot_path.py
docs/: CHAT_INTERACTIONS.md  CONFIG_MAP.md  COST_ESTIMATION.md  DEPLOY.md  DEPLOYMENT_LOG.md  EVAL.md  SCHEMA.md  (+20 more)
graph_lab/: .gitignore  batch.py  cli.py  dashboard.py  migrate.py  pyproject.toml  replay_viewer.py  requirements.txt  simulate.py
graph_lab/config/: corpus.yaml  graph.yaml  triggers.yaml
graph_lab/config/personas/: diego.yaml  elena.yaml  jaden.yaml  kwame.yaml  marcus.yaml  maya.yaml  priya.yaml  ruth.yaml  sam.yaml  tomoko.yaml
graph_lab/config/prompts/: ingest.md  system.md
graph_lab/corpus/: generate.py  replay.py  types.py  validate.py
graph_lab/corpus/scenarios/: ambiguity.yaml  completions.yaml  contradictions.yaml  corrections.yaml  emotional_spirals.yaml  extremes.yaml  gaps_and_resurrections.yaml  multi_topic.yaml  staleness.yaml  time_edge_cases.yaml
graph_lab/docs/: EXPERIMENT_REPORT.md
graph_lab/src/: config.py  db.py  embedding.py  evolve.py  feedback.py  ingest.py  llm.py  reasoning.py  retrieval.py  serialization.py  triggers.py  types.py
graph_lab/tests/: conftest.py  test_corpus.py  test_ingest.py  test_retrieval.py  test_serialization.py  test_simulation.py  test_triggers.py
(+635 files in other folders)
